scripts/aws_deploy/template.json
{
    "Parameters": {
      "KeyExample": {
        "Description": "The EC2 Key Pair to allow SSH access to the instance",
        "Type": "AWS::EC2::KeyPair::KeyName"
      }
    },
    "Resources": {
      "Ec2Instance": {
        "Type": "AWS::EC2::Instance",
        "Properties": {
          "SecurityGroups": [
            {
              "Ref": "SecurityGroupExample"
            }
          ],
          "KeyName": {
            "Ref": "KeyExample"
          },
          "ImageId": "ami-f6035893",
          "InstanceType": "t2.large",
          "UserData": {
                "Fn::Base64": {
                    "Fn::Join": [
                        "",
                        [
                            "#!/bin/bash\n",
                            "echo \">>>> Starting boostraping <<<<\"\n",
                            "echo \"Update yum\"\n",
                            "yum update -y\n",
                            "echo \">>>> Install git and clone repo <<<<\"\n",
                            "yum install git -y\n",
                            "git clone https://github.com/danniefairy/Document_Extraction.git\n",
                            "echo \">>>> Install repo dependency <<<<\"\n",
                            "cd /Document_Extraction\n",                         
                            "chmod +x scripts/aws_deploy/aws_bootstrap.sh\n",
                            "sh scripts/aws_deploy/aws_bootstrap.sh\n",
                            "echo \">>>> Run the service <<<<\"\n",
                            "cd server\n",
                            "python3 app.py --env aws\n",
                            "echo \">>>> End of boostrap <<<<\"\n"
                        ]
                    ]
                }
            }
        }
      },
      "SecurityGroupExample": {
        "Type": "AWS::EC2::SecurityGroup",
        "Properties": {
          "GroupDescription": "this is an example",
          "SecurityGroupIngress": [
            {
              "IpProtocol": "tcp",
              "FromPort": "22",
              "ToPort": "22",
              "CidrIp": "0.0.0.0/0"
            },
            {
                "IpProtocol": "tcp",
                "FromPort": "80",
                "ToPort": "80",
                "CidrIp": "0.0.0.0/0"
            }
          ]
        }
      }
    }
}
